--- a/SettingsBundle/Resources/config/services.yaml
+++ b/SettingsBundle/Resources/config/services.yaml
@@ -1,12 +1,17 @@
+parameters:
+    settings_upload_path: '%kernel.project_dir%/public/uploads'
+
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         public: false       # Allows optimizing the container by removing unused services; this also means
-          # fetching services directly from the container via $container->get() won't work.
-        # The best practice is to be explicit about your dependencies anyway.
+        bind:
+            $settingsUploadPath: '%settings_upload_path%'
 
     Kaliber5\SettingsBundle\Provider\SettingsProvider:
 
     Kaliber5\SettingsBundle\Provider\SettingTypeProvider:
+
+    Kaliber5\SettingsBundle\Provider\FileProviderInterface: '@Kaliber5\SettingsBundle\Provider\SimpleFileProvider'
