--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "webmozart/assert": "^1.0"
   },
   "require-dev": {
-    "sonata-project/admin-bundle": "^3.81"
+    "sonata-project/admin-bundle": "^3.81",
+    "easycorp/easyadmin-bundle": "^3.5"
   }
 }
