--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     }
   },
   "require": {
-    "php": "^7.2",
+    "php": "^7.2 || ^8.0",
     "sylius/attribute": "^1.6.2",
     "doctrine/orm": "*",
     "webmozart/assert": "^1.0"
